tests/error/comptime/reference_result.bz
// error: invalid value of type '&i32' returned from compile time execution
// note: a reference of type '&i32' is not a constant expression
// error: a global variable must be initialized with a constant expression
consteval i = 0;
let &r = i;
